# cone

./: LICENSE  README.md  evaluate_disgenet.py  evaluate_ibd_ra.py  main.py  pyproject.toml  requirements.txt
baselines/pinnacle/outputs/pinnacle/: acinar_cell_of_salivary_gland.npz  adipocyte.npz  adventitial_cell.npz  alveolar_fibroblast.npz  artery_endothelial_cell.npz  b_cell.npz  basal_cell.npz  basal_cell_of_prostate_epithelium.npz  bladder_urothelial_cell.npz  bronchial_smooth_muscle_cell.npz  bronchial_vessel_endothelial_cell.npz  capillary_endothelial_cell.npz  cardiac_endothelial_cell.npz  cardiac_muscle_cell.npz  cd141-positive_myeloid_dendritic_cell.npz  cd1c-positive_myeloid_dendritic_cell.npz  cd24_neutrophil.npz  cd4-positive,_alpha-beta_memory_t_cell.npz  cd4-positive_helper_t_cell.npz  cd8-positive,_alpha-beta_cytokine_secreting_effector_t_cell.npz  cd8-positive,_alpha-beta_cytotoxic_t_cell.npz  cell_of_skeletal_muscle.npz  ciliary_body.npz  ciliated_cell.npz  ciliated_epithelial_cell.npz  classical_monocyte.npz  club_cell.npz  club_cell_of_prostate_epithelium.npz  conjunctival_epithelial_cell.npz  connective_tissue_cell.npz  corneal_epithelial_cell.npz  corneal_keratocyte.npz  (+124 more)
cone/: config.py  data.py  io.py  loaders.py  metrics.py  model.py  trainer.py  utils.py
cone/modules/: context_encoder.py  gnn.py  mlp.py  random_walk.py
conf/: config.yaml
conf/context/: celltype_pinnacle.yaml  tissue_gtex_expr.yaml
conf/network/: pinppi.yaml
data/networks/: pinppi.npz
data/processed/gene_set_collections/: disgenet.gmt  pinnacle_drug_targets.json
(+1 files in other folders)
